[package]
name = "releasible"
version = "0.1.0"
authors = ["Rick Elrod <rick@elrod.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["alloc", "std", "clock", "serde"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
tera = "1"
tokio = { version = "1", features = ["full"] }
